--- a/app/src/main/res/layout/card_view_kategoriler.xml
+++ b/app/src/main/res/layout/card_view_kategoriler.xml
@@ -19,39 +19,29 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/imgKopekLogo"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:id="@+id/imgKategori"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
-                android:id="@+id/txtKopekAdi"
+                android:id="@+id/txtKategoriAdi"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
                 android:text="TextView"
                 android:textColor="@color/black"
-                app:layout_constraintBottom_toTopOf="@+id/txtYasamSuresi"
-                app:layout_constraintStart_toStartOf="@+id/imgKopekLogo"
-                app:layout_constraintTop_toBottomOf="@+id/imgKopekLogo"
-                tools:text="Pitbull" />
-
-            <TextView
-                android:id="@+id/txtYasamSuresi"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="TextView"
-                android:textColor="@color/black"
-                app:layout_constraintStart_toStartOf="@+id/txtKopekAdi"
-                app:layout_constraintTop_toBottomOf="@+id/txtKopekAdi"
-                tools:text="8 – 15 yıl" />
-
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/imgKategori"
+                app:layout_constraintStart_toStartOf="@+id/imgKategori"
+                app:layout_constraintTop_toBottomOf="@+id/imgKategori" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
