Dimen ayarları yapıldı. Kategoriler ve ürünler getirildi

--- a/app/src/main/res/layout/activity_giris.xml
+++ b/app/src/main/res/layout/activity_giris.xml
@@ -11,12 +11,12 @@
         android:id="@+id/edtSifre"
         android:layout_width="@dimen/match_constraint"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginTop="@dimen/edittext_margintop"
+        android:layout_marginEnd="@dimen/edittext_marginend"
         android:background="@drawable/inputshape"
         android:ems="10"
         android:inputType="textPassword"
-        android:padding="15dp"
+        android:padding="@dimen/edittext_padding"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/textView2"
@@ -24,9 +24,9 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="300dp"
+        android:layout_width="@dimen/imageviev2_width"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="@dimen/imageviev2_margintop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -36,11 +36,11 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="@dimen/textviev_marginstart"
+        android:layout_marginTop="@dimen/textviev2_margintop"
         android:text="@string/giris_text"
         android:textColor="@color/blue_dark"
-        android:textSize="30dp"
+        android:textSize="@dimen/textviev_margintop"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
@@ -49,10 +49,10 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="@dimen/textviev2_margintop"
         android:text="@string/giris_email"
         android:textColor="@color/login_text"
-        android:textSize="16sp"
+        android:textSize="@dimen/textviev2_textsize"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -60,12 +60,12 @@
         android:id="@+id/edtEmail"
         android:layout_width="@dimen/match_constraint"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginTop="@dimen/edtemail_margintop"
+        android:layout_marginEnd="@dimen/edtemail_marginend"
         android:background="@drawable/inputshape"
         android:ems="10"
         android:inputType="textEmailAddress"
-        android:padding="15dp"
+        android:padding="@dimen/edtemail_padding"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/textView2"
@@ -75,17 +75,17 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="@dimen/textviev3_margintop"
         android:text="@string/giris_sifre"
-        android:textSize="16sp"
+        android:textSize="@dimen/textviev3_textsize"
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/edtEmail" />
 
     <Button
         android:id="@+id/btnGirisYap"
-        android:layout_width="100dp"
+        android:layout_width="@dimen/btngirisyap_width"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="@dimen/btngirisyap_margintop"
         android:background="@drawable/login_buttonshape"
         android:text="@string/giris_text"
         android:textAllCaps="false"
