--- a/app/src/main/res/layout/card_view_kategoriler.xml
+++ b/app/src/main/res/layout/card_view_kategoriler.xml
@@ -7,6 +7,7 @@
 
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/crdKategori"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/card_view_padding"
@@ -23,9 +24,11 @@
 
             <ImageView
                 android:id="@+id/imgKategori"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/imgkategori_width"
+                android:layout_height="@dimen/imgkategori_height"
+                app:layout_constraintBottom_toTopOf="@+id/txtKategoriAdi"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:srcCompat="@tools:sample/avatars" />
@@ -34,13 +37,13 @@
                 android:id="@+id/txtKategoriAdi"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginTop="@dimen/txtkategoriadi_margintop"
+                android:layout_marginBottom="@dimen/txtkategoriadi_marginbutton"
                 android:text="TextView"
                 android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/imgKategori"
-                app:layout_constraintStart_toStartOf="@+id/imgKategori"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imgKategori" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
